force-app/main/default/objects/Five9__Five9AdminWS_del__c/Five9__Five9AdminWS_del__c.object-meta.xml
<CustomObject>
    <label>Five9AdminWS</label>
    <nameField>
        <label>Five9AdminWS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Five9AdminWS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>