force-app/main/default/objects/Five9__Five9AdminWS_del__c/fields/Five9__Password__c.field-meta.xml
<CustomField>
    <fullName>Five9__Password__c</fullName>
    <description>Five9 Admin Web Service password</description>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>