force-app/main/default/objects/Five9__Five9AdminWS_del__c/fields/Five9__ReportEmail__c.field-meta.xml
<CustomField>
    <fullName>Five9__ReportEmail__c</fullName>
    <label>ReportEmail</label>
    <type>Email</type>
</CustomField>