force-app/main/default/objects/Five9__Five9AdminWS_del__c/fields/Five9__URL__c.field-meta.xml
<CustomField>
    <fullName>Five9__URL__c</fullName>
    <description>Five9 Admin Web Service URL</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>