force-app/main/default/objects/Five9__Five9AdminWS_del__c/fields/Five9__Username__c.field-meta.xml
<CustomField>
    <fullName>Five9__Username__c</fullName>
    <description>Five9 Admin Web Service username</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>