force-app/main/default/objects/Five9__Five9AdminWS_del__c/listViews/Five9__All.listView-meta.xml
<ListView>
    <fullName>Five9__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>